<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingHorizontal="@dimen/_20sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/viewAccent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_4sdp"
                    android:background="@drawable/bg_dialog_developer_accent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imvIcon"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_dialog_developer_switch_row"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/ic_developer_setting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/viewAccent" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/text_bold_16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center"
                    android:text="@string/txt_developer_setting_title"
                    android:textColor="@color/textPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imvIcon" />

                <TextView
                    android:id="@+id/tvSubtitle"
                    style="@style/text_regular_12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:gravity="center"
                    android:text="@string/txt_developer_setting_subtitle"
                    android:textColor="@color/color_9E9E9E"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <LinearLayout
                    android:id="@+id/layoutSwitchRow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_dialog_developer_switch_row"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvUnlimitedAdsLabel"
                            style="@style/text_bold_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_developer_setting_unlimited_ads"
                            android:textColor="@color/textPrimary" />

                        <TextView
                            android:id="@+id/tvUnlimitedAdsHint"
                            style="@style/text_regular_10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="@string/txt_developer_setting_unlimited_ads_hint"
                            android:textColor="@color/color_9E9E9E" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/switchUnlimitedAds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:thumbTint="@color/color_main"
                        android:trackTint="#3C4FA8"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="#D3DAFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutSwitchRow" />

                <TextView
                    android:id="@+id/btnChecklist"
                    style="@style/text_bold_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/bg_shape_outline"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_policy"
                    android:drawablePadding="@dimen/_8sdp"
                    android:drawableTint="@color/color_main"
                    android:focusable="true"
                    android:gravity="center"
                    android:minHeight="@dimen/_44sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/txt_show_checklist_option"
                    android:textColor="@color/color_main"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <TextView
                    android:id="@+id/btnApply"
                    style="@style/text_bold_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/bg_button_primary"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:minHeight="@dimen/_44sdp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:text="@string/txt_apply"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnChecklist" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
